contrast errors in contact fixed

--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -3988,6 +3988,7 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 		background-color: #f5f5f5;
+		/* background-color: #f5f5f5; */
 		color: #909498;
 		cursor: default;
 		position: relative;
@@ -4002,7 +4003,8 @@ input, select, textarea {
 		}
 
 		#footer a {
-			color: #717981;
+			/* color: #717981; */
+			color: black;
 			border-bottom-color: rgba(113, 121, 129, 0.5);
 		}
 
@@ -4016,7 +4018,12 @@ input, select, textarea {
 		}
 
 		#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
-			color: #717981;
+			/* color: #717981; */
+			color: black;
+		}
+
+		#footer p {
+			color: black
 		}
 
 		#footer blockquote {
